fix: shopsection card when out of view vertically on page load, useCallback for navsearch

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,7 +82,7 @@
 }
 
 .fastFadeIn {
- animation: fadeIn 0.3s ease-in-out;
+ animation: fadeIn 0.5s ease-in-out;
 }
 
 @keyframes fadeIn {
